--- a/src/app/pages/dte/template/create/template-create.component.scss
+++ b/src/app/pages/dte/template/create/template-create.component.scss
@@ -119,6 +119,19 @@
       }
     }
 
+    .btn-img {
+      -webkit-box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 2px 1px -1px rgba(0, 0, 0, 0.12), 0 1px 3px 0 rgba(0, 0, 0, 0.2);
+      box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 2px 1px -1px rgba(0, 0, 0, 0.12), 0 1px 3px 0 rgba(0, 0, 0, 0.2);
+      background-color: #f5f5f5;
+      position: absolute;
+    }
+
+    .template-task-image {
+      width: 40%;
+      border: 1px solid #ececec;
+      border-radius: 3px;
+    }
+
     .required-section {
       display: flex;
       align-content: center;
@@ -166,6 +179,32 @@
       display: inline-block;
       outline: none;
       padding-bottom: 8px;
+    }
+
+    .footer {
+      .note {
+        font-size: 15px;
+        font-weight: 500;
+      }
+
+      // IE10 fix
+      .logo,
+      .small-note {
+        -ms-flex: 0 1 auto;
+      }
+
+      .logo {
+        width: 32px;
+        min-width: 32px;
+        margin-right: 24px;
+      }
+
+      .small-note {
+        font-size: 12px;
+        font-weight: 500;
+        color: rgba(0, 0, 0, 0.54);
+        line-height: 18px;
+      }
     }
   }
 }
