--- a/src/app/pages/dte/trade/create/trade-create.component.html
+++ b/src/app/pages/dte/trade/create/trade-create.component.html
@@ -1,3 +1,79 @@
-<p>
-  trade-create works!
-</p>
+<div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
+  <!-- HEADER -->
+  <page-content-header [contentTitle]="'Buat Trade Program'"></page-content-header>
+  <!-- / HEADER -->
+
+  <div class="content p-24" fusePerfectScrollbar>
+    <div class="ayo-main-wrapper mat-white-bg" fxLayout="column">
+      <div fxLayout="row" fxLayoutAlign="start center">
+        <h2 class="">Buat Trade Program</h2>
+      </div>
+      <br>
+      <form autocomplete="off" [formGroup]="formTradeProgram" (keydown.enter)="$event.preventDefault();">
+        <div class="ayo-middle" fxLayout="column">
+          <div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="60px" fxLayoutGap.lt-md="0px">
+            <mat-form-field fxFlex="47%" class="is-light form-primary">
+              <input matInput type="text" formControlName="name" placeholder="Nama Trade Program">
+              <mat-error *ngIf="formTradeProgram.controls['name'].hasError('required') && formTradeProgram.controls['name'].touched">
+                Nama Trade Program harus diisi
+              </mat-error>
+            </mat-form-field>
+          </div>
+          <div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="60px" fxLayoutGap.lt-md="0px">
+
+            <mat-form-field fxFlex="50%" class="is-light form-primary">
+              <input matInput formControlName="start_date" [matDatepicker]="startDate" placeholder="Tanggal Mulai"
+                (dateChange)="setMinEndDate()">
+              <mat-datepicker-toggle matSuffix [for]="startDate">
+                <mat-icon matDatepickerToggleIcon>date_range</mat-icon>
+              </mat-datepicker-toggle>
+              <mat-datepicker #startDate></mat-datepicker>
+              <mat-error *ngIf="formTradeProgram.controls['start_date'].hasError('required') && formTradeProgram.controls['start_date'].touched">
+                Tanggal Mulai harus diisi
+              </mat-error>
+            </mat-form-field>
+
+            <mat-form-field fxFlex="50%" class="is-light form-primary">
+              <input matInput formControlName="end_date" [matDatepicker]="endDate" placeholder="Tanggal Berakhir" [min]="minDate"
+                (dateChange)="setMinExpireDate()">
+              <mat-datepicker-toggle matSuffix [for]="endDate">
+                <mat-icon matDatepickerToggleIcon>date_range</mat-icon>
+              </mat-datepicker-toggle>
+              <mat-datepicker #endDate></mat-datepicker>
+              <mat-error *ngIf="formTradeProgram.controls['start_date'].hasError('required') && formTradeProgram.controls['start_date'].touched">
+                Tanggal Berakhir harus diisi
+              </mat-error>
+            </mat-form-field>
+          </div>
+          <div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="60px" fxLayoutGap.lt-md="0px">
+            <mat-form-field fxFlex="47%" class="is-light form-primary">
+              <input matInput type="number" min="0" formControlName="budget" placeholder="Dana Trade Program"
+                numericOnly>
+              <mat-error *ngIf="formTradeProgram.controls['budget'].hasError('required') && formTradeProgram.controls['budget'].touched">
+                Dana Trade Program harus diisi
+              </mat-error>
+            </mat-form-field>
+          </div>
+          <div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="60px" fxLayoutGap.lt-md="0px">
+            <mat-form-field fxFlex="47%" class="is-light form-primary">
+              <input matInput formControlName="coin_expiry_date" [matDatepicker]="dp" placeholder="Tanggal Kadaluarsa Coin Trade Program"
+                [min]="minExpireDate">
+              <mat-datepicker-toggle matSuffix [for]="dp">
+                <mat-icon matDatepickerToggleIcon>date_range</mat-icon>
+              </mat-datepicker-toggle>
+              <mat-datepicker #dp></mat-datepicker>
+              <mat-error *ngIf="formTradeProgram.controls['coin_expiry_date'].hasError('required') && formTradeProgram.controls['coin_expiry_date'].touched">
+                Tanggal Kadaluarsa Coin Trade Program harus diisi
+              </mat-error>
+            </mat-form-field>
+          </div>
+        </div>
+      </form>
+      <div class="confirm pt-24 pb-24" fxLayout="row">
+        <button mat-raised-button type="button" class="confirmation-button" fxFlex="20" (click)="submit()">
+          SIMPAN
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
