--- a/src/app/pages/dte/schedule-program/index/schedule-program-index.component.html
+++ b/src/app/pages/dte/schedule-program/index/schedule-program-index.component.html
@@ -1,6 +1,9 @@
 <div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
   <!-- HEADER -->
   <page-content-header [contentTitle]="'Pengatur Jadwal Trade Program'">
+    <button style="width: 150px" [routerLink]="['/dte','schedule-trade-program', 'create']" mat-raised-button type="button">
+      <mat-icon>add</mat-icon> BUAT
+    </button>
   </page-content-header>
   <!-- / HEADER -->
   <div class="content p-24" *ngIf="!onLoad">
@@ -68,7 +71,7 @@
 
         <ngx-datatable-column name="Nama" prop="scheduler_name">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-            <span class="row-name" [routerLink]="['/dte', 'schedule-trade-program', 'edit', row.id]">{{row.scheduler_name}}</span>
+            <span class="row-name" [routerLink]="['/dte', 'schedule-trade-program', 'detail', row.id]">{{row.scheduler_name}}</span>
           </ng-template>
         </ngx-datatable-column>
 
